fixed alignment clock

--- a/Project1/assets/css/style.css
+++ b/Project1/assets/css/style.css
@@ -28,7 +28,7 @@ h1 {
     font-size: 55px;
     padding: 10px;
 }
-#dt{
+#dt{color: #214a9c;
     text-align: center;
 }
 
